<resources>
    <string name="app_name">MoodItFromOrbit</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">SignUp</string>
    <string name="signUpInput">User name</string>
    <string name="signUpConfirm">Confirm user name</string>
    <string name="signUpMessage">Please sign up here: </string>
    <string name="signInInput">User name</string>
    <string name="signInMessage">Please sign in here: </string>
    <string name="logIn">Log In</string>
    <string name="create">Create new logIn!</string>
    <string name="sortBy">Sort By</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_profile">Profile</string>
    <string name="action_add_mood">Add Mood</string>
    <string name="action_map">Show Map</string>
    <string name="menu_refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="menu_follow">Follow</string>
    <string name="searchText">Search Text</string>
    <string name="searchMood">Search Mood</string>
    <string name="filter">Filter</string>
    <string name="cancel">Clear</string>
    <string name="server">Unable to Reach Server</string>
    <string name="all_users">All Users</string>
    <string name="recentWeek">Filter by most recent week</string>
    <string name="follow_requests">Follower Requests</string>
    <string name="logout">Logout</string>
    <string name="closeDist">Filter moods within 5 Km. </string>
    <string name="refresh">Refresh</string>
    <string name="close">No</string>

    <string-array name="Emotions_List">
        <item>Angry</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <string-array name="Emotions_List_Filter">
        <item>Search Mood</item>
        <item>Angry</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>



    <string-array name="group_status">
        <item>Alone</item>
        <item>With One Other</item>
        <item>2 to Several</item>
        <item>Crowd</item>
    </string-array>

</resources>
