<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) $2017 CMPUT 301 University of Alberta. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add_mood"
        android:title="@string/action_add_mood"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_sort_black_24dp"
        app:actionViewClass="android.support.v7.widget.ActionMenuView" />

    <item android:id="@+id/action_dashboard"
        android:title="Dashboard"
        app:showAsAction="never"/>

    <item android:id="@+id/action_map"
        android:title="@string/action_map"
        android:icon="@drawable/ic_map_white_24px"
        app:showAsAction="always" />


    <item android:id="@+id/action_all_users"
        android:title="@string/all_users"
        app:showAsAction="never" />

    <item android:id="@+id/action_accept_requests"
        android:title="@string/follow_requests"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>


</menu>