<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) $2017 CMPUT 301 University of Alberta. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add_mood"
        android:title="@string/action_add_mood"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        app:actionViewClass="android.support.v7.widget.ActionMenuView" />
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />


    <item android:id="@+id/action_map"
        android:title="@string/action_map"
        app:showAsAction="never" />

    <item android:id="@+id/action_follow"
        android:title="@string/menu_follow"
        app:showAsAction="never" />



</menu>