<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) $2017 CMPUT 301 University of Alberta. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_home_black_24px"
        app:showAsAction="always"/>
    <item android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_white_24px"
        app:showAsAction="always"/>
    <item android:id="@+id/action_requests"
        android:title="@string/follow_requests"
        android:icon="@drawable/ic_person_add_black_24px"
        app:showAsAction="always"/>
    <item android:id="@+id/action_all"
        android:title="@string/all_users"
        android:icon="@drawable/ic_people_black_24px"
        app:showAsAction="always"/>

</menu>