<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) $2017 CMPUT 301 University of Alberta. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add_mood"
        android:title="@string/action_add_mood"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_dashboard"
        android:title="@string/dashboard"
        app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>





</menu>