<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/signInHeader"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="15sp"
        android:text="@string/signInMessage" />

    <EditText
        android:id="@+id/signInInput"
        android:layout_marginTop="70dp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:textColorHint="#ff444444"
        android:hint="@string/signInInput" />

    <Button
        android:id="@+id/logIn"
        android:layout_marginTop="70dp"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:text="@string/logIn" />


</LinearLayout>