<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/signIn"
            android:layout_marginTop="70dp"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:textSize="20sp"
            android:text="@string/signIn" />
        <Button
            android:id="@+id/signUp"
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:textSize="20sp"
            android:text="@string/signUp"/>
    </LinearLayout>

</LinearLayout>